--- a/ApiTest/templates/singleApi.html
+++ b/ApiTest/templates/singleApi.html
@@ -333,7 +333,7 @@
 	</div>
 
 	<!--更新用户信息-->
-	<div class="layui-row" id="update_roleinfo" style="display: none;">
+	<div class="layui-row" id="update_role_info" style="display: none;">
 		<div class="layui-col-md11">
 			<form class="layui-form" lay-filter="update_roleinfo">
 
@@ -493,7 +493,7 @@
 	</div>
 
 	<!--重复执行-->
-	<div class="layui-row" id="repeatrun" style="display: none;">
+	<div class="layui-row" id="repeat_run" style="display: none;">
 		<div class="layui-col-md11">
 			<div class="layui-tab">
 			  <ul class="layui-tab-title">
@@ -595,55 +595,25 @@
                     console.log(obj.cache); // 改动后全表数据
                     console.log(obj.oldIndex); // 原来的数据索引
                     console.log(obj.newIndex); // 改动后数据索引
-                    if (obj.cache.length >= 30) {
-                        $.ajax({
+                    var l = [];
+                    for (var i in obj.cache) {
+                        l.push(obj.cache[i].caseid)
+                    }
+                    console.log(l);
+                    $.ajax({
                             cache: false,
-                            url: "/web_sort/",
-                            dataType: 'text',
-                            type: 'GET',
-                            //async: false,
-                            data: {
-                                "oldIndex": obj.oldIndex,
-                                "newIndex":obj.newIndex
-                            },
-                            success: function (data) {
-                                layer.msg(data, {
-                                    offset: 't',
-                                    icon: 6,
-                                });
-                                $(".layui-laypage-btn").click();
-                            },
-                            error: function (data) {
-                                console.log(data);
-                                layer.msg(data, {
-                                    offset: 't',
-                                    icon: 5
-                                });
-                            }
-                        });
-                    } else {
-                        var l = [];
-                        for (var i in obj.cache) {
-                            l.push(obj.cache[i].caseid)
-                        }
-                        var belong = obj.cache[0].belong;
-                        console.log(l);
-                        console.log(belong);
-						$.ajax({
-                            cache: false,
-                            url: "/web_sort/",
+                            url: "/singleapi/sort/",
                             dataType: 'text',
                             type: 'POST',
                             //async: false,
                             data: {
-                                //"oldIndex": obj.oldIndex,
-                                //"newIndex":obj.newIndex
-                                "data": JSON.stringify(l),
-								"belong":belong,
+                                "caseids": JSON.stringify(l),
+								"belong":"{{ belong }}",
 								"system":"{{ system }}"
                             },
                             success: function (data) {
-                                layer.msg(data, {
+                                let msg = JSON.parse(data).msg;
+                                layer.msg(msg, {
                                     offset: 't',
                                     icon: 6,
                                 });
@@ -659,7 +629,6 @@
                         });
                     }
 
-                }
             }//排序
 			, size: 'lg'	//大尺寸 /sm小尺寸
 			, skin: 'line' //行边框风格 /row列表框风格 /nob无边框风格
@@ -759,7 +728,7 @@
 
             ]]
             ,filter: {
-            items:['column','editCondition','excel'] // 只显示表格列和导出excel两个菜单项
+                items:['column','editCondition','excel'] // 只显示表格列和导出excel两个菜单项
         	}
             , id: 'testReload'
 			,rowEvent: function (obj) {
@@ -892,7 +861,7 @@
                     }
                     break;
                 //发送钉钉消息
-                case 'dingding':
+                case 'ding_ding':
                     var data = checkStatus.data;
                     console.log(data);
                     if (data.length == 0) {
@@ -1012,7 +981,7 @@
                         content: $("#importCase").html()
                     });
                     break;
-                //删除用例
+                //批量删除用例
                 case "batch_delete":
                     var data = checkStatus.data;
                     layer.confirm('真的删除行么', function (index) {
@@ -1081,7 +1050,7 @@
 							area: ['30%', '40%'],
 							skin: "layui-layer-rim",
 							shade: 0.6,
-							content: $("#repeatrun").html(),
+							content: $("#repeat_run").html(),
 							success:function (layero, index) {
 							    layui.use('form', function () {
 									var form = layui.form;
@@ -1348,8 +1317,6 @@
                         params: value
                     });
                     layer.close(index);
-
-
                 });
             }
             //编辑body请求数据
@@ -1488,7 +1455,7 @@
 					, shadeClose:true
 					,moveOut: true
 					, area: ["30%", '40%'] //自定义文本域宽高
-					,content:$("#requestParams").html(),
+					,content:$("#head").html(),
 					success:function () {
 						layui.use('form', function () {
 							var form = layui.form;
@@ -1680,20 +1647,20 @@
         });
     }
     //编辑用户信息
-    function update_roleinfo() {
-        var update_roleinfo = layer.open({
+    function update_role_info() {
+        var update_role_info = layer.open({
             //layer提供了5种层类型。可传入的值有：0（信息框，默认）1（页面层）2（iframe层）3（加载层）4（tips层）
             type: 1,
             title: "编辑用户信息",
             area: ['40%', ''],
             shade: 0.6,
             skin: "layui-layer-rim",
-            content: $("#update_roleinfo").html(),
+            content: $("#update_role_info").html(),
             success: function () {
                 layui.use(['form',"jquery"], function () {
                     var form = layui.form;
                     	$=layui.$;
-                    form.val("update_roleinfo", {
+                    form.val("update_role_info", {
                         "system":"{{ system }}",
                         "username": "@amberdata.cn",
                         "password": "Y+zilsR88g9SZI8WOeHJlA=="
@@ -1717,7 +1684,7 @@
 						}
 
                     });
-                    form.on('submit(update_roleinfo)', function (data) {
+                    form.on('submit(update_role_info)', function (data) {
                         $.ajax({
                             cache: false,
                             url: "/systemrole/update_info/"+data.field.identity+"/",
@@ -1751,7 +1718,7 @@
                                 });
                             },
                             complete: function () {
-                                layer.close(update_roleinfo)
+                                layer.close(update_role_info)
 
                             }
                         });
@@ -1808,10 +1775,10 @@
 <script type="text/html" id="toolbarDemo">
 	<div class="layui-btn-container">
 		<button type="button" onclick="add_case()" class="layui-btn layui-btn-sm">新建用例</button>
-		<button type="button" onclick="update_roleinfo()" class="layui-btn layui-btn-sm">用户信息</button>
+		<button type="button" onclick="update_role_info()" class="layui-btn layui-btn-sm">用户信息</button>
 		<button class="layui-btn layui-btn-sm" lay-event="batch_delete">批量删除</button>
 		<button id="Runcase" class="layui-btn layui-btn-sm" lay-event="run_case">执行用例</button>
-		<button id="Dingding" class="layui-btn layui-btn-sm" lay-event="dingding">钉钉通知</button>
+		<button id="Dingding" class="layui-btn layui-btn-sm" lay-event="ding_ding">钉钉通知</button>
 		<button class="layui-btn layui-btn-sm" lay-event="repeat_run">重复执行</button>
         <button class="layui-btn layui-btn-sm" lay-event="import_case">导入用例</button>
         <button class="layui-btn layui-btn-sm" lay-event="export_case">导出用例</button>
