--- a/ApiTest/templates/processApi.html
+++ b/ApiTest/templates/processApi.html
@@ -991,8 +991,9 @@
             , cols: [[ //表头, fixed: 'left'
                 {type: 'checkbox'}
                 , {title: '操作', toolbar: '#barDemo', width: 80, align: "left"}
+                , {field: 'caseid', title: '序号', width: 60, align: "center"}
                 , {field: 'identity', title: '', width: 70, align: "center", templet: "#identityTpl"}
-                , {field: 'casename', title: '接口名称', width: 250, align: "left", excel: {color:'0040ff',bgColor:'f3fef3'}, templet: "#casenameTpl",children:[
+                , {field: 'casename', title: '接口名称', width: 220, align: "left", excel: {color:'0040ff',bgColor:'f3fef3'}, templet: "#casenameTpl",children:[
                     {
 						elem: '#templateTable'
 						, url: "//"
@@ -1018,7 +1019,7 @@
 
 					}
 				]}// filter: true
-                , {field: 'url', title: '请求路径', width: 250, align: "left",templet:function (res) {
+                , {field: 'url', title: '请求路径', width: 220, align: "left",templet:function (res) {
 						var a = res.url.split("/");
 						return '<span>' + a[a.length-1] + '</span>'
                     }}
@@ -1053,15 +1054,14 @@
                     field: 'result', title: '响应结果', align: "left",  event:"detail", templet: function (res) {
                          if(res.result == null) {
                              return '<span>' + res.result + '</span>'
-                         }else if (res.result.indexOf("message") != -1 && res.result.indexOf("error") != -1) {
+                         }
+                         else if (res.result.indexOf("message") != -1 && res.result.indexOf("error") != -1) {
                             let b = JSON.parse(res.result);
                             return '<span style="color: red;">' + JSON.stringify(b["message"]) + '</span>'
-                        }else if(res.result != ""){
-                            let a = JSON.parse(res.result);
-                            return '<span>' + JSON.stringify(a) + '</span>'
-                        } else {
+                         }
+                         else {
                             return '<span>' + res.result + '</span>'
-                        }
+                         }
                     }
                 }
                 , {field: 'head', title: '负责人', width: 80, event: "head", align: "left"}//merge: true行合并
@@ -1509,7 +1509,7 @@
                                 }
                                 $.ajax({
                                     cache: false,
-                                    url: "/ding_ding/",
+                                    url: "/publicapi/dingding/",
                                     dataType: 'text',
                                     type: 'GET',
                                     //async: false,
@@ -1519,14 +1519,13 @@
                                     },
                                     //请求前的处理,加载loading
                                     beforeSend: function () {
-                                        document.getElementById("Dingding").setAttribute("disabled", true);
-                                        document.getElementById("Dingding").innerHTML = "loading...";
                                         l_index = layer.msg('发送钉钉中，小伙伴请稍候~~', {icon: 16, time: false, shade: 0.5});
                                         //l_index = layer.load(0, {shade: [0.5, '#DBDBDB']}); //0.1透明度的白色背景
                                     },
                                     success: function (data) {
                                         console.log(data);
-                                        layer.msg(data, {
+                                        let msg = JSON.parse(data).msg;
+                                        layer.msg(msg, {
                                             icon: 6,
                                             offset: 't',
                                         });
@@ -1541,8 +1540,6 @@
                                         });
                                     },
                                     complete: function () {
-                                        document.getElementById("Dingding").removeAttribute("disabled");
-                                        document.getElementById("Dingding").innerHTML = "钉钉通知";
                                         layer.close(l_index);
                                     }
                                 });
@@ -2467,8 +2464,8 @@
             title: "新建用例",
             skin: "layui-layer-molv",
             shade: 0.6,
-            area: ['35%', ''],
-            offset: 't',
+            area: ['35%', '90%'],
+            //offset: 't',
             content: $("#add_case").html(),
             success: function () {
                 layui.use(['form', "jquery"], function () {
