--- a/ApiTest/static/css/index.css
+++ b/ApiTest/static/css/index.css
@@ -77,15 +77,6 @@ iframe{ position:absolute; height:100%; width:100%; border:none;}
 .layui-nav-item.layui-nav-itemed{ background-color:#2B2E37 !important;}
 .layui-nav-itemed:before{ width:5px; height:100%; background-color:#009688; position:absolute; content:''; left:0; top:0;}
 .layui-nav-itemed .layui-nav-child a{ padding-left:40px;}
-/*左侧搜索框*/
-.component{ width:180px; height:30px; margin:0 auto 5px; position:relative;}
-.component .layui-input{ height:30px; line-height: 30px; font-size:12px; border:none; transition: all 0.3s; background:rgba(255,255,255,0.05); }
-.component .layui-input:focus{ background:#fff; color:#000; }
-.component .layui-form-select dl{ top:33px; background:#fff; }
-.component .layui-icon{ position: absolute; right:8px; top:8px; color:#000; }
-.component dl dd{ color:#000 !important;}
-.component dl dd.layui-this{ color:#fff !important;}
-.component dl dd.layui-select-tips{ color:#999 !important;}
 
 /*layui-body*/
 .layui-body{overflow:hidden; border-top:5px solid #1AA094;border-left:2px solid #1AA094; background:#fff;}
@@ -156,3 +147,7 @@ iframe{ position:absolute; height:100%; width:100%; border:none;}
 .header .layui-nav .layui-nav-item,.header .layui-nav .layui-nav-item>a,.header,.logo{ line-height:50px !important; max-height:50px; !important;}
 .mobileTopLevelMenus{ float:left;}
 .hideMenu{ margin-top: 10px;}
+/*myzzh*/
+.layui-layout-admin .layui-body{bottom:0px;}
+.layui-tab{margin: 0px;}
+.logo{padding: 0px;}
