--- a/ApiTest/templates/apiDetail.html
+++ b/ApiTest/templates/apiDetail.html
@@ -4,13 +4,17 @@
 	<meta charset="utf-8">
 	<title>Testapi-接口详情</title>
 	<meta name="renderer" content="webkit">
-	<link rel="icon" href="./../static/images/favicon%202.ico">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+    <link rel="icon" href="./../static/images/favicon%202.ico">
 	<link rel="stylesheet" href="./../static/css/layui.css" media="all">
-	<script src="./../static/js/layui/layui.js"></script>
 	<link rel="stylesheet" type="text/css" href="./../static/css/main.css">
 	<link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+
+	<script src="./../static/js/layui2.5.5/layui.js"></script>
+
+
 </head>
 <style>
 	*{
