--- a/ApiTest/templates/quickTest.html
+++ b/ApiTest/templates/quickTest.html
@@ -4,53 +4,17 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Testapi-快速测试</title>
-	<link rel="icon" href="../../Web/static/images/favicon%202.ico">
+
+	<link rel="icon" href="../static/images/favicon%202.ico">
 	<link rel="stylesheet" href="./../static/css/layui.css">
-	<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="./../static/css/quickTest.css">
 	<link href="./../static/bootstrap-3.3.7-dist/css/bootstrap.min.css">
-	<script src="./../static/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+
+    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+  	<script src="./../static/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 	<script src="./../static/js/layui/layui.js"></script>
-	<link rel="stylesheet" href="./../static/font-awesome-4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="./../static/css/soulTable.css">
-	<style>
-		#headers > li input {
-			height: 36px;
-			line-height: 36px;
-			width: 440px;
-		}
-
-		#formdatas > li input {
-			height: 36px;
-			line-height: 36px;
-			width: 440px;
-		}
-
-		.myinput {
-			line-height: 1.3;
-			border-width: 1px;
-			border-style: solid;
-			border-radius: 2px;
-			border-color: #e6e6e6;
-			padding-left: 10px;
-		}
-
-		.mybtn {
-			text-align: center;
-			padding: 0px;
-		}
-
-		#method > div > div > input {
-			background-color: aliceblue;
-		}
-		.layui-collapse{
-			border-width:0px;
-			border-radius:0px;
-		}
-		.layui-colla-title{
-			background-color: #ffffff;
-		}
-	</style>
 </head>
+
 <body>
 <div class="layui-layout layui-layout-admin">
 	<!--快速测试-->
