--- a/ApiTest/templates/singleApi.html
+++ b/ApiTest/templates/singleApi.html
@@ -4,129 +4,16 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Testapi-单一接口测试</title>
+
 	<link rel="icon" href="../static/images/favicon%202.ico">
-	<script src="../static/jquery-3.4.1/jquery-3.4.1.min.js"></script>
-	<link href="../static/bootstrap-3.3.7-dist/css/bootstrap.min.css">
-	<script src="../static/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="../static/css/layui.css">
-	<script src="../static/js/layui/layui.js"></script>
 	<link rel="stylesheet" href="../static/font-awesome-4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="../static/css/soulTable.css">
-	<script type="text/javascript" src="../static/js/cache.js"></script>
+    <link rel="stylesheet" href="./../static/css/singleApi.css">
 
-	<style>
-		#casetitle {
-			font-size: 22px;
-			padding: 0px;
-			color: white;
-			margin-left: -5px;
-		}
-
-		#casetitle:hover {
-			color: red;
-		}
-
-		.layui-form-item {
-			margin-bottom: 10px;
-		}
-
-		.layui-bg-black {
-			background-color: #393d49 !important;
-		}
-
-		.layui-nav {
-			background-color: #393d49;
-		}
-
-		.kit-side-fold {
-			font-size: 18px;
-			text-align: center;
-		}
-
-		#sousuo {
-			position: fixed;
-			right: 15px;
-			top: 15px;
-		}
-
-		.layui-laypage .layui-laypage-curr .layui-laypage-em {
-			{#background-color: #FFB800;#}
-		}
-
-		.layui-layout-admin .layui-header {
-			background-color: #23262E;
-		}
-		.layui-layer-input{
-			padding:20px;
-		}
-		.layui-laypage a, .layui-laypage span{
-			color: #fff;
-		}
-		.layui-table-page .layui-laypage{
-			position: fixed;
-			right: 30px;
-		}
-		.layui-breadcrumb a{
-			color:#fff!important;
-		}
-		.layui-breadcrumb>*{
-			font-size: 22px;
-		}
-		.layui-breadcrumb span[lay-separator]{
-			color:#fff;
-			margin:0px 0px 0px;
-			margin-right: -10px;
-		}
-		.layui-breadcrumb a+a{
-			color:#fff!important;
-		}
-		.soul-bottom-contion{
-			border-top:solid 0px #fff;
-		}
-		#headers>li input{
-			height: 36px;
-			line-height: 36px;
-			width: 440px;
-		}
-		#formdatas>li input{
-			height: 36px;
-			line-height: 36px;
-			width: 440px;
-		}
-		.myinput{
-			line-height: 1.3;border-width:1px;border-style:solid;border-radius:2px;border-color:#e6e6e6;padding-left:10px;
-		}
-		.mybtn{
-			text-align: center;
-			padding: 0px;
-		}
-		#method>div>div>input{
-			background-color: aliceblue;
-		}
-		.layui-header{
-			height:50px;
-		}
-		.layui-layout-admin .layui-side{
-			top:50px;
-		}
-		.layui-layout-admin .layui-body{
-			top:48px;
-		}
-		.layui-layout-admin .layui-logo{
-			line-height:50px;
-		}
-		.layui-nav .layui-nav-item{
-			line-height:50px;
-		}
-		.layui-table-tool{
-			background-color:rgba(0, 0, 0, 0.15);
-		}
-		.layui-body{
-			left:0px;
-		}
-
-	</style>
+	<script src="../static/js/layui2.5.5/layui.js"></script>
 </head>
+
 <!--background-image: url('../static/images/beijing3.png');background-size:100%;-->
 <body class="layui-layout-body" style="background-color:lightsteelblue;">
 
@@ -137,7 +24,7 @@
 			<div class="demoTable">
 				<div class="layui-breadcrumb">
 					<span class="layui-icon layui-icon-link" style="font-size: 22px;color: #fff;">
-						<a href="/web_apiindex/?system={{ system }}" class= "index"  style="color: #fff;" >http://amberdata.cn/{{ system }}api</a>
+						<a href="" class= "index"  style="color: #fff;" >http://amberdata.cn/{{ system }}api</a>
 						<a class="kit-side-fold casetitle" style="font-size: 22px;color: #fff;">{{ belong_key }}</a>
 					</span>
 				</div>
@@ -558,7 +445,7 @@
 <script>
     // 自定义模块
     layui.config({
-        base: './../static/js/layui/lay/modules/',   // 模块目录
+        base: './../static/js/layui2.5.5/lay/modules/',   // 模块目录
         version: 'v1.3.28'
     }).extend({             // 模块别名
         soulTable: 'soulTable'
@@ -575,11 +462,11 @@
             , url: '/singleapi/list/' //数据接口"exports"
             , toolbar: '#toolbarDemo'
             , defaultToolbar: [
-                'filter', {title: '导出数据', layEvent: 'export', icon: 'layui-icon-download-circle'}, {
+                'filter', {title: '导出数据', layEvent: 'export_case', icon: 'layui-icon-download-circle'}, {
                     title: '全屏显示',
                     layEvent: 'fullScreen',
                     icon: 'layui-icon-top'
-                }, {title: '导入数据', layEvent: 'import', icon: 'layui-icon-upload-circle'}, 'print']
+                }, {title: '导入数据', layEvent: 'import_case', icon: 'layui-icon-upload-circle'}, 'print']
             , title: '接口测试'
             , page: {groups: 5} //开启分页
 			, loading: false
@@ -655,7 +542,7 @@
                 //, {field: 'caseid', title: 'ID', width: 60,  align: "left"}
                 //, {field: 'sort', title: '排序号', width: 60,  align: "left"}
                 , {field: 'identity', title: '', width: 70, align: "center", templet: "#identityTpl"}
-                , {field: 'casename', title: '接口名称', width: 250, align: "left", excel: {color:'0040ff',bgColor:'f3fef3'}, templet: "#casenameTpl",children:[
+                , {field: 'casename', title: '接口名称', width: 220, align: "left", excel: {color:'0040ff',bgColor:'f3fef3'}, templet: "#casenameTpl",children:[
                     {
 						elem: '#templateTable'
 						, url: "//"
@@ -681,7 +568,8 @@
 
 					}
 				]}// filter: true
-                , {field: 'url', title: '请求路径', width: 250, align: "left",templet:function (res) {
+                , {field: 'url', title: '请求路径', width: 220, align: "left",templet:function (res) {
+                        console.log(res.url);
 						var a = res.url.split("/");
 						return '<span>' + a[a.length-1] + '</span>'
                     }}
@@ -770,7 +658,6 @@
                     var data = checkStatus.data;
                     console.log(data);
                     if (data.length == 0) {
-                        layer.close(run_case);
                         layer.msg("请先选中需要执行的用例", {
                             icon: 2,
                             offset: "t"
@@ -801,8 +688,10 @@
                             },
                             //请求前的处理,加载loading
                             beforeSend: function () {
-                                l_index = layer.load(0, {
-                                    shade: [0.5, '#DBDBDB'] //0.1透明度的白色背景
+                                l_index = layer.msg('执行接口中，小伙伴请稍候~~', {
+                                    icon: 16,
+                                    time: false,
+                                    shade: 0.5
                                 });
                             },
                             success: function (data) {
@@ -887,8 +776,8 @@
                                     },
                                     //请求前的处理,加载loading
                                     beforeSend: function () {
-                                        document.getElementById("Dingding").setAttribute("disabled", true);
-                                        document.getElementById("Dingding").innerHTML = "loading...";
+                                        {#document.getElementById("Dingding").setAttribute("disabled", true);#}
+                                        {#document.getElementById("Dingding").innerHTML = "loading...";#}
                                         l_index = layer.load(0, {
                                             shade: [0.5, '#DBDBDB'] //0.1透明度的白色背景
                                         });
@@ -906,13 +795,12 @@
                                         console.log(data);
                                         layer.msg(data, {
                                             icon: 5,
-                                            offset: 't',
-                                            anim: 6
+                                            offset: 't'
                                         });
                                     },
                                     complete: function () {
-                                        document.getElementById("Dingding").removeAttribute("disabled");
-                                        document.getElementById("Dingding").innerHTML = "钉钉通知";
+                                        {#document.getElementById("Dingding").removeAttribute("disabled");#}
+                                        {#document.getElementById("Dingding").innerHTML = "钉钉通知";#}
                                         layer.close(l_index);
                                     }
                                 });
@@ -1100,7 +988,7 @@
                                                                     dataType: 'JSON',
                                                                     type: 'GET',
                                                                     //async: false,
-                                                                    data: {},
+                                                                    //data: {},
                                                                     success: function (num_progress) {
                                                                         console.log(num_progress);
                                                                         element.progress('demo', num_progress + '%');
@@ -1772,14 +1660,12 @@
 <!--表头按钮 layui-btn-disabled-->
 <script type="text/html" id="toolbarDemo">
 	<div class="layui-btn-container">
-		<button type="button" onclick="add_case()" class="layui-btn layui-btn-sm">新建用例</button>
+		<button type="button" onclick="add_case()" class="layui-btn layui-btn-sm">添加接口</button>
 		<button type="button" onclick="update_role_info()" class="layui-btn layui-btn-sm">用户信息</button>
 		<button class="layui-btn layui-btn-sm" lay-event="batch_delete">批量删除</button>
-		<button id="Runcase" class="layui-btn layui-btn-sm" lay-event="run_case">执行用例</button>
-		<button id="Dingding" class="layui-btn layui-btn-sm" lay-event="ding_ding">钉钉通知</button>
+        <button class="layui-btn layui-btn-sm" lay-event="ding_ding">钉钉通知</button>
+		<button class="layui-btn layui-btn-sm layui-icon layui-icon-triangle-r" lay-event="run_case">执行</button>
 		<button class="layui-btn layui-btn-sm" lay-event="repeat_run">重复执行</button>
-        <button class="layui-btn layui-btn-sm" lay-event="import_case">导入用例</button>
-        <button class="layui-btn layui-btn-sm" lay-event="export_case">导出用例</button>
 	</div>
 </script>
 <!--行内按钮-->
